experimental/ir/testdata/options/values/any.proto.stderr.txt
error: type URL can only contain a single `/`
  --> testdata/options/values/any.proto:31:32
   |
31 | option (y) = { [buf.build/types/buf.test.Foo] {
   |                          -     ^
   |                          |
   |                          first one is here

error: unsupported hostname `buf.build/types` in `Any` type URL
  --> testdata/options/values/any.proto:31:17
   |
31 | option (y) = { [buf.build/types/buf.test.Foo] {
   |                 ^^^^^^^^^^^^^^^
   = note: `protoc` will reject any hostname that are not `type.googleapis.com`
           or `type.googleprod.com`. This is a quirk of textformat; the compiler
           does not actually make any network requests.

error: missing hostname in `Any` type URL
  --> testdata/options/values/any.proto:35:16
   |
35 | option (y) = { [/buf.test.Foo] {
   |                ^^^^^^^^^^^^^^^
   = note: `protoc` requires that the hostname be one of `type.googleapis.com`
           or `type.googleprod.com`. This is a quirk of textformat; the compiler
           does not actually make any network requests.

error: partly-qualified name in `Any` type URL
  --> testdata/options/values/any.proto:39:37
   |
39 | option (y) = { [type.googleapis.com/Foo] {
   |                                     ^^^ type referenced here
  help: replace with fully qualified name
   |
39 | - option (y) = { [type.googleapis.com/Foo] {
39 | + option (y) = { [type.googleapis.com/buf.test.Foo] {
   |
   = note: `Any` type URL require fully qualified names

error: unexpected field in `Any` expression
  --> testdata/options/values/any.proto:66:13
   |
65 |             [type.googleapis.com/buf.test.Foo]: { x1: 42 }
   |             ---------------------------------- expected this to be the only field
66 |             [type.googleapis.com/google.protobuf.FileOptions]: {}
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the `Any` type URL must be the only field

error: unexpected field in `Any` expression
  --> testdata/options/values/any.proto:69:13
   |
69 |             type_url: "type.googleapis.com/buf.test.Bar"
   |             ^^^^^^^^
70 |             [type.googleapis.com/buf.test.Foo]: { x1: 42 }
   |             ---------------------------------- expected this to be the only field
   = note: the `Any` type URL must be the only field

error: unexpected field in `Any` expression
  --> testdata/options/values/any.proto:71:13
   |
71 |             bytes: "xyz"
   |             ^^^^^
   = note: the `Any` type URL must be the only field

error: mismatched types
  --> testdata/options/values/any.proto:77:47
   |
77 |         { [type.googleapis.com/buf.test.Foo]: 42 },
   |           ----------------------------------  ^^ expected `buf.test.Foo`, found integer literal
   |           |
   |           expected due to this
   = note: expected: message type `buf.test.Foo`
              found: integer literal

error: expected message type, found enum type `buf.test.Bar`
  --> testdata/options/values/any.proto:78:32
   |
78 |         { [type.googleapis.com/buf.test.Bar]: BAR_ZERO },
   |                                ^^^^^^^^^^^^ expected message type
79 |         { [type.googleapis.com/buf.test.NotReal]: {} },
...
91 | enum Bar {
   |      --- defined here

error: cannot find `buf.test.NotReal` in this scope
  --> testdata/options/values/any.proto:79:32
   |
79 |         { [type.googleapis.com/buf.test.NotReal]: {} },
   |                                ^^^^^^^^^^^^^^^^ not found in this scope
   = help: the full name of this scope is `buf.test`

error: expected message type, found message field `buf.test.Foo.a`
  --> testdata/options/values/any.proto:80:32
   |
80 |         { [type.googleapis.com/buf.test.Foo.a]: 42 }
   |                                ^^^^^^^^^^^^^^ expected message type
...
88 |     repeated google.protobuf.Any a = 3;
   |                                  - defined here

encountered 11 errors
